feat: Compatible with get requests
